--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,14 +9,29 @@ License: What license is it under?
 URL: https://github.com/mikael04/shiny.ef.aps.dashboard
 BugReports: https://github.com/mikael04/shiny.ef.aps.dashboard /issues
 Imports: 
+    bslib,
     config (>= 0.3.2),
+    DBI,
+    dplyr,
     ggiraph,
+    ggplot2,
+    ggtext,
     golem (>= 0.4.1),
+    gt,
+    RPostgres,
+    sf,
     shiny (>= 1.8.1.1),
-    shinycssloaders
+    shiny.router,
+    shinyalert,
+    shinycssloaders,
+    shinyWidgets,
+    stringr,
+    tidyr
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
+Depends: 
+    R (>= 2.10)
