--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,9 +8,12 @@ Description: Repositório de aplicação Shiny para avaliação de eficiência
 License: What license is it under?
 URL: https://github.com/mikael04/shiny.ef.aps.dashboard
 BugReports: https://github.com/mikael04/shiny.ef.aps.dashboard /issues
+Depends: 
+    R (>= 2.10)
 Imports: 
     bslib,
     config (>= 0.3.2),
+    data.table,
     DBI,
     dplyr,
     ggiraph,
@@ -18,7 +21,11 @@ Imports:
     ggtext,
     golem (>= 0.4.1),
     gt,
+    here,
+    lubridate,
+    patchwork,
     RPostgres,
+    RPostgreSQL,
     sf,
     shiny (>= 1.8.1.1),
     shiny.router,
@@ -26,12 +33,11 @@ Imports:
     shinycssloaders,
     shinyWidgets,
     stringr,
-    tidyr
+    tidyr,
+    usethis
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
-Depends: 
-    R (>= 2.10)
