--- a/inst/config.yml
+++ b/inst/config.yml
@@ -10,10 +10,26 @@ production:
     dbname: ${DB_NAME}
     user: ${DB_USER}
     password: ${DB_PASSWORD_PROD}
-development:
+  local:
+    port: 4000
+    prod: TRUE
+development_vm:
+  db:
+    host: ${DB_HOST}
+    port: 5432
+    dbname: ${DB_NAME}
+    user: ${DB_USER}
+    password: ${DB_PASSWORD_PROD}
+  local:
+    port: 4001
+    prod: FALSE
+development_local:
   db:
     host: ${DB_HOST}
     port: 5432
     dbname: ${DB_NAME}
     user: ${DB_USER}
     password: ${DB_PASSWORD_DEV}
+  local:
+    port: 4000
+    prod: FALSE
