--- a/.github/workflows/run_rscript.yml
+++ b/.github/workflows/run_rscript.yml
@@ -12,16 +12,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Debug Secrets
-      run: |
-        echo "VPS_HOST: ${{ secrets.VPS_HOST }}"
-        echo "VPS_USER: ${{ secrets.VPS_USER }}"
-        echo "SSH_DEPLOY_KEY: ${{ secrets.SSH_DEPLOY_KEY }}"
     - name: Checkout code
       uses: actions/checkout@v2
     # Usar as actions via SSH para se conectar na VPS e rodar o script
     - name: Deploy na VPS via SSH
-      uses: appleboy/ssh-action@v1.2.0
+      uses: webfactory/ssh-action@v4.0.1
       with:
           host: ${{ secrets.VPS_HOST }}           # e.g., IP address or domain of VPS
           username: ${{ secrets.VPS_USER }}       # VPS username
