--- a/.github/workflows/run_rscript.yml
+++ b/.github/workflows/run_rscript.yml
@@ -25,31 +25,31 @@ jobs:
       - name: Deploy VPS
         uses: easingthemes/ssh-deploy@main
         with:
-          SSH_PRIVATE_KEY: ${{secrets.SERVER_SSH_KEY}}
-          ARGS: "-rlgoDzvc --delete"
-          REMOTE_HOST: 45.231.133.242
+          SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
+          REMOTE_HOST: ${{ secrets.VPS_HOST }}
           REMOTE_USER: root
           REMOTE_PORT: 22
-          script: |
-            # Derrubando aplicação anterior
+          SOURCE: "./"                       # what folder to rsync from
+          TARGET: "/srv/shiny-server/shiny.ef.aps.dashboard/"  # remote folder
+          ARGS: "-rlgoDzvc --delete"
+          
+          # Run your commands AFTER code is synced
+          SCRIPT_AFTER: |
+            echo "Stopping old R process..."
             pid=$(ps aux | grep "Rscript.R" | awk '{print $2}')
-
-            # Verificando se o processo está aberto
             if [ -n "$pid" ]; then
               echo "Killing process with PID: $pid"
               kill -9 $pid
             else
               echo "No matching process found."
             fi
-
-            # Navigate to your project directory
-            cd /srv/shiny-server/shiny.ef.aps.dashboard/
-
-            # Pull the latest code from GitHub
+            
+            echo "Pulling latest from Git..."
+            cd /srv/shiny-server/shiny.ef.aps.dashboard
             git pull origin main
-
-            # Optionally install/refresh R packages if needed:
+            
+            # Optionally install/refresh R packages
             # Rscript -e "install.packages('remotes'); remotes::install_deps()"
 
-            # Run your R script
+            echo "Starting new R script..."
             Rscript app.R
