--- a/.github/workflows/run_rscript.yml
+++ b/.github/workflows/run_rscript.yml
@@ -32,9 +32,15 @@ jobs:
           SOURCE: "./"                       # what folder to rsync from
           TARGET: "/srv/shiny-server/shiny.ef.aps.dashboard/"  # remote folder
           ARGS: "-rlgoDzvc --delete"
-          
+
           # Run your commands AFTER code is synced
           SCRIPT_AFTER: |
+            echo "Creating .Renviron"
+            cat <<EOF > .Renviron
+            # .Renviron
+            R_CONFIG_ACTIVE=development_local
+            EOF
+
             echo "Stopping old R process..."
             pid=$(ps aux | grep "Rscript.R" | awk '{print $2}')
             if [ -n "$pid" ]; then
@@ -43,11 +49,11 @@ jobs:
             else
               echo "No matching process found."
             fi
-            
+
             echo "Pulling latest from Git..."
             cd /srv/shiny-server/shiny.ef.aps.dashboard
             git pull origin main
-            
+
             # Optionally install/refresh R packages
             # Rscript -e "install.packages('remotes'); remotes::install_deps()"
 
