--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,6 @@ Imports:
     here,
     lubridate,
     patchwork,
-    pkgload,
     RPostgreSQL,
     sf,
     shiny (>= 1.8.1.1),
@@ -34,7 +33,8 @@ Imports:
     shinyWidgets,
     stringr,
     tidyr,
-    usethis
+    usethis,
+    withr
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
